tests/ui/mir-dataflow/liveness-ptr.stderr
error: rustc_peek: bit not set
  --> $DIR/liveness-ptr.rs:18:5
   |
LL |     rustc_peek(x);
   |     ^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 2 previous errors

